@@ -4,6 +4,7 @@ v1.1
 - added sound when hit
 - fixed entity vertical positioning
 - fixed tnt:boom node left after explosion
+- added setting to customize spawn nodes
 
 v1.0
 ----
